[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/settings_menu_controller.gd" id="1_settings_menu_controller"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings_menu_controller")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsContent" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="VBoxContainer/SettingsContent"]
layout_mode = 2
text = "Audio Settings (Coming Soon)"

[node name="VideoLabel" type="Label" parent="VBoxContainer/SettingsContent"]
layout_mode = 2
text = "Video Settings (Coming Soon)"

[node name="ControlsLabel" type="Label" parent="VBoxContainer/SettingsContent"]
layout_mode = 2
text = "Control Settings (Coming Soon)"

[node name="ScalingContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScalingTitle" type="Label" parent="VBoxContainer/ScalingContainer"]
layout_mode = 2
text = "Difficulty Scaling"
horizontal_alignment = 1

[node name="ScalingToggle" type="CheckButton" parent="VBoxContainer/ScalingContainer"]
layout_mode = 2
text = "Enable Scaling"

[node name="ScalingModeSelector" type="OptionButton" parent="VBoxContainer/ScalingContainer"]
layout_mode = 2
text = "Mode: Adaptive"

[node name="ScalingStatus" type="VBoxContainer" parent="VBoxContainer/ScalingContainer"]
layout_mode = 2

[node name="ScalingStatusLabel" type="Label" parent="VBoxContainer/ScalingContainer/ScalingStatus"]
layout_mode = 2
text = "Status: Ready"

[node name="PerformanceMetricsLabel" type="Label" parent="VBoxContainer/ScalingContainer/ScalingStatus"]
layout_mode = 2
text = "Metrics: N/A"

[node name="ScalingControls" type="HBoxContainer" parent="VBoxContainer/ScalingContainer"]
layout_mode = 2

[node name="ResetDifficultyButton" type="Button" parent="VBoxContainer/ScalingContainer/ScalingControls"]
layout_mode = 2
text = "Reset"

[node name="RollbackDifficultyButton" type="Button" parent="VBoxContainer/ScalingContainer/ScalingControls"]
layout_mode = 2
text = "Rollback"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"